# firmware

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CPPLINT.cfg  Doxyfile  LICENSE  Makefile  README.md  Vagrantfile  diagram.json  flake.nix  platformio-release.ini  platformio.ini  qodana.yaml  requirements.txt  wokwi.toml
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: commit-msg  pre-commit
docs/: HARDWARE_ABSTRACTION_LAYER.md
include/: AdafruitDisplayStub.hpp  AdafruitSSD1306Display.hpp  Adafruit_SSD1306.h  AnalogPin.hpp  ArduinoCompat.hpp  Button.hpp  DigitalPin.hpp  Display.hpp  DisplayTile.hpp  HAL.hpp  HcSr04.hpp  LvglStub.hpp  Module.hpp  Oled096Display.hpp  OledDisplay.hpp  PWMPin.hpp  Peripheral.hpp  Pin.hpp  Sensor.hpp  Switch.hpp  TFTST7735Display.hpp  Tile.hpp  Wire.h  dummy_device.h  dummy_device.hpp  lvgl.h
scripts/: check_commit_prefix.py  check_commit_prefix.sh  close_issues.py  dockerfile_lint.py  install_apt_packages.sh  install_brew_packages.sh  install_cpplint.sh  install_hooks.sh  install_platformio.sh  install_uv.sh  makefile_lint.py  makefile_lint.sh  markdown_lint.py  markdown_lint.sh  setup_env.sh  wokwi_sanity.py  wokwi_sanity.sh
simulator/: sim_main.cpp
src/: AdafruitSSD1306Display.cpp  Adafruit_SSD1306.cpp  AnalogPin.cpp  Button.cpp  DigitalPin.cpp  Display.cpp  DisplayTile.cpp  HcSr04.cpp  Module.cpp  Oled096Display.cpp  OledDisplay.cpp  PWMPin.cpp  Peripheral.cpp  Pin.cpp  Sensor.cpp  Switch.cpp  TFTST7735Display.cpp  Tile.cpp  arduino_stubs.cpp  dummy_device.c  dummy_device.cpp  hal.c  hal.cpp  (+3 more)
(+32 files in other folders)
